// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BankAccountNumberField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx guHpUh"
    >
      <label
        for="name"
      >
        Numer konta bankowego
      </label>
      <input
        class="sc-iqAbSa fdLqwF"
        id="bankAccountNumberField"
        label="Numer konta bankowego"
        name="name"
        placeholder="Numer konta bankowego"
        value="test"
      />
      <span
        class="sc-kEqYlL lmrtkS"
      >
        Podany numer konta jest nieprawidłowy
      </span>
    </div>
  </form>
</div>
`;

exports[`<BankAccountNumberField /> matches snapshot 1`] = `
<input
  class="sc-iqAbSa jrHUfY"
  id="bankAccountNumberField"
  label="Numer konta bankowego"
  name="name"
  placeholder="Numer konta bankowego"
  value=""
/>
`;

exports[`<BankAccountNumberField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx guHpUh"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <input
        class="sc-iqAbSa fdLqwF"
        id="bankAccountNumberField"
        label="Test"
        name="name"
        placeholder="Numer konta bankowego*"
        required=""
        value=""
      />
      <span
        class="sc-kEqYlL lmrtkS"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<BankAccountNumberField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx guHpUh"
    >
      <label
        for="name"
      >
        Test
      </label>
      <input
        class="sc-iqAbSa jrHUfY"
        id="bankAccountNumberField"
        label="Test"
        name="name"
        placeholder="Numer konta bankowego"
        value=""
      />
    </div>
  </form>
</div>
`;
